--- a/style/style.css
+++ b/style/style.css
@@ -76,6 +76,8 @@ body {
     background-color: rgba(0, 0, 0, 0.233);
     box-shadow: -1rem 0 3rem #000;
     border-radius: 5px;
+    display: flex;
+    flex-direction: column;
 }
 
 .sidebar li {
@@ -90,21 +92,23 @@ body {
 }
 
 .carousel {
-    height: 20vh;
+    height: 30vh;
+    margin-left: 3vh;
     overflow-y: hidden;
     overflow-x: auto;
     display: flex;
-    width: 60vh;
+    width: 70vh;
     gap: 8px;
     align-items: center;
     scroll-snap-type: x mandatory;
 }
 .carousel::-webkit-scrollbar{
-    height: 2px;
+    height: 5px;
     width: 100%;
 }
 .carousel-img>img {
-    width: 280px;
+    width: 400px;
+    box-shadow: black -4px 0 4px;
 }
 
 .carousel::-webkit-scrollbar-track {
@@ -113,6 +117,10 @@ body {
 
 .carousel::-webkit-scrollbar-thumb {
     background: #29AB87;
+}
+
+.carousel::-webkit-scrollbar-track-piece:start {
+    background: white;
 }
 
 /* .carousel::-webkit-scrollbar-track-piece:start {
